Spine réparé (ABI PerBlue) + login→BootData→MainScreen bout-en-bout
Le jeu atteint le MainScreen interactif avec NOTRE serveur, et tous les squelettes Spine
se chargent (0 échec) et s'animent.

Correctifs (aucun stub) :
- tools/reframe/ReframeJar : reframe ASM (COMPUTE_FRAMES) de game-logic.jar → supprime le crash
  JVM generateOopMap sur le parse des stats binaires ; retrait de -Xverify:none.
- com/google/firebase/perf/network/FirebasePerfUrlConnection : shadow, instrument() renvoie la
  connexion réelle (désactive l'analytics Firebase qui tuait le thread de téléchargement).
- dhbackend/DhBridges : createPurchasingInterface() (et méthodes renvoyant une interface) → NO-OP
  imbriqué au lieu de null → plus de NPE 'purchasing' dans handleBootData.
- com/badlogic/gdx/utils/DataInput : shadow avec l'implémentation EXACTE de libGDX 1.9.7
  (readString/readInt(boolean) supprimés par ProGuard côté PerBlue, requis par spine).
- tools/reframe/PatchGdxCalls : re-cible spine-libgdx sur l'ABI modifiée de PerBlue (réécrit les
  appels gdx au descripteur divergent, ex. Array.add ...V -> ...Z ; 106 appels) → spine-libgdx-perblue.jar.
- run-desktop.sh : étapes reproductibles (téléchargement ASM/spine + reframe + patch) ; build.gradle
  utilise spine-libgdx-perblue.jar.

#CPARTICLE reste en dette documentée (#NP-V3, NP_FORMAT.md).

Co-Authored-By: Claude <noreply@anthropic.com>